# DNSSEC-Tools

./: .gitignore  README.md
dnssec-tools/: .cvsignore  COPYING  ChangeLog  INSTALL  Makefile.bot  Makefile.in  Makefile.top  NEWS  README  README.md  aclocal.m4  configure  configure.in  dnssec-tools-config.h.in  podmantex  podtrans
dnssec-tools/apps/: README  libspf2-1.0.4_dnssec_guide.txt  libspf2-1.0.4_dnssec_howto.txt  libspf2-1.0.4_dnssec_patch.txt  libspf2-1.2.5_dnssec_guide.txt  libspf2-1.2.5_dnssec_howto.txt  libspf2-1.2.5_dnssec_patch.txt  libspf2_dnssec_doc.txt
dnssec-tools/apps/curl/: README.curl  curl-7.28.0.patch  curl-7.29.0.patch
dnssec-tools/apps/jabberd-2/: jabberd-dnssec.pat
dnssec-tools/apps/lftp/: README  lftp-3-4-7_dnssec_patch.txt  lftp-3-5-10_dnssec_patch.txt  lftp-dnssec.patch
dnssec-tools/apps/libspf2/: README.dnssec  libspf2-1.0.4_dnssec_guide.txt  libspf2-1.0.4_dnssec_patch.txt  libspf2-1.2.5_dnssec_guide.txt  libspf2-1.2.5_dnssec_patch.txt  libspf2-dnssec.patch
dnssec-tools/apps/mozilla/: README  README.firefox  README.nspr  README.thunderbird  README.xulrunner  comm-central.patch  dnssec-both-ff3.0.patch  dnssec-both.patch  dnssec-enable.patch  dnssec-firefox-ff3.0.patch  dnssec-firefox.patch  dnssec-mozconfig.patch  dnssec-nspr.patch  dnssec-pkgconfig.patch  dnssec-thunderbird.patch  firefox-dnssec-rpm.patch  firefox-spec.patch  firefox.spec  mozilla-central.patch  nspr-spec.patch  xulrunner-spec.patch
dnssec-tools/apps/nagios/: README  diff-side.php  diff-status.c  dt-trustman  dt_donuts  dt_trustman  dt_zonestat  dt_zonetimer  dtnagobj  sample.dnssec-tools.cfg  sample.rollrec  status.c
dnssec-tools/apps/ncftp/: README  ncftp-3.2.0_dnssec_howto.txt  ncftp-3.2.0_dnssec_patch.txt  ncftp-3.2.x-dnssec-howto.txt  ncftp-dnssec.patch
dnssec-tools/apps/ntp/: README  ntp-dnssec.patch
dnssec-tools/apps/openswan/: README.dnssec  libval-thread.patch  libval.patch  makefile.patch
dnssec-tools/apps/owl-monitor/: COPYING  README
dnssec-tools/apps/postfix/: README.dnssec  postfix-2.2.11_dnssec_patch.txt  postfix-2.2.x_dnssec_howto.txt  postfix-2.3.8_dnssec_patch.txt  postfix-2.3.x_dnssec_howto.txt  postfix-2.5.1-dnssec-howto.txt  postfix-dnssec.patch  postfix-howto.txt  postfix.spec
dnssec-tools/apps/proftpd/: README.dnssec  proftpd-1.3.x_dnssec_patch.txt  proftpd-dnssec.patch
dnssec-tools/apps/qt/: README  qt4.patch
dnssec-tools/apps/qt5/: README  qt5.patch
dnssec-tools/apps/sendmail/: README  configure  dnssec-milter.c  sendmail-8.13.1_dnssec_howto.txt  sendmail-8.13.1_dnssec_patch.txt  sendmail-8.13.3_dnssec_howto.txt  sendmail-8.13.3_dnssec_patch.txt  sendmail-8.13.4_dnssec_patch.txt  sendmail-8.13.6_dnssec_patch.txt  sendmail-8.13.x_dnssec_howto.txt  sendmail-8.14.1_dnssec_patch.txt  sendmail-dnssec-howto.txt  sendmail-spec.patch  spfmilter-0.97_dnssec_patch.txt  spfmilter-0.97_libspf2.patch  spfmilter-1.0.8_dnssec_howto.txt  spfmilter-1.0.8_dnssec_patch.txt  spfmilter-dnssec-howto.txt  test.c
dnssec-tools/apps/ssh/: README.dnssec  README.ssh  openssh-5.0p1-dnssec.patch  openssh-5.1p1-dnssec.patch  ssh-dnssec.pat
dnssec-tools/apps/thunderbird/: .cvsignore  Makefile  README  install.rdf
dnssec-tools/apps/webmin/: webmin-1.580-dt.patch
dnssec-tools/apps/wget/: README  wget-1.10.2_dnssec_patch.txt  wget-dnssec.patch
dnssec-tools/apps/zabbix/: README  backup-zabbix  item.fields  rollstate  uemstats  zabbix_agentd.conf  zonestate
dnssec-tools/docs/: dnssec-tools.1
dnssec-tools/lib/libsres/: EXPORT.sym  Makefile  Makefile.in  README  base64.c  ns_name.c  ns_netint.c  ns_parse.c  ns_print.c  ns_samedomain.c  ns_ttl.c  res_comp.c  res_debug.c  res_debug.h  res_errors.h  res_io_manager.c  res_io_manager.h  res_mkquery.c  res_mkquery.h  res_query.c  res_query.h  res_support.c  res_support.h  res_transaction.c  res_transaction.h  res_tsig.c  res_tsig.h  resolver.h  support.c  support.h
dnssec-tools/lib/libval/: Makefile.in  README  dnsval.conf  val_assertion.c  val_assertion.h  val_cache.c  val_cache.h  val_context.c  val_context.h  val_errors.h  val_getaddrinfo.c  val_getaddrinfo.h  val_gethostbyname.c  val_gethostbyname.h  val_log.c  val_log.h  val_parse.c  val_parse.h  val_policy.c  val_policy.h  val_print.c  val_print.h  val_query.c  val_query.h  val_resquery.c  val_resquery.h  val_support.c  val_support.h  val_verify.c  val_verify.h  val_x_query.c  val_x_query.h  val_zone.c  val_zone.h  validator.h
dnssec-tools/lib/libvalidat/: .cvsignore  Makefile.in  main.c  val_internal.h  val_parse.c  val_parse.h  val_print.c  val_print.h  validat-config.h.in  validat.c  validat.h
dnssec-tools/lib/val_stub/: .cvsignore  Makefile  Makefile.in  README  dnsval.conf  getaddr.c  gethost.c  main.c  res_squery.c  res_squery.h  res_verification.c  res_zone.c  res_zone.h  resolver_driver.c  val_api.h  val_assertion.c  val_assertion.h  val_cache.c  val_cache.h  val_context.c  val_context.h  val_errors.h  val_getaddrinfo.c  val_getaddrinfo.h  val_gethostbyname.c  val_gethostbyname.h  val_log.c  val_log.h  val_parse.c  val_parse.h  val_policy.c  val_policy.h  val_print.c  val_print.h  val_query.c  val_query.h  val_resquery.c  val_resquery.h  val_support.c  val_support.h  (+8 more)
dnssec-tools/testing/: Makefile  Makefile.in  README  TODO  dnssec-tools.conf  example.com  rollerd-example.com  rolltest.sh  saved-example.com  saved-example.rollrec  saved-named.conf  saved-nsec3.example.com  saved-rndc.key
dnssec-tools/testing/donuts/: example.com
dnssec-tools/testing/rollerd/: dsset-example.com.  save-example.rollrec
dnssec-tools/testing/t/: 010zonesigner.t  011zonesigner-soa-tests.t  020donuts.t  025donutsd.t  030trustman.t  040rollerd.t  050trustman-rollerd.t  dt_testingtools.pl
dnssec-tools/testing/zones/: example.com  saved-example.com
dnssec-tools/testing/zonesigner-soas/: example.com.commented  example.com.multi-line  (+1 more)
dnssec-tools/tools/: Makefile.PL  README
dnssec-tools/validator/: .cvsignore  ChangeLog  Makefile.bot  Makefile.in  Makefile.top  README  acinclude.m4  aclocal.m4  configure  configure.in  libval-config.in  windows.mak
(+1837 files in other folders)
