dnl Process this file with autoconf to produce a configure script.
dnl

dnl provide it a file to simply check for its existence.
AC_INIT([dnssec-tools], [0.9.1], [dnssec-tools-users@lists.sourceforge.net])
AC_PREREQ([2.59])

dnl ----------------------------------------------------------------------
dnl catch mis-typed options as early as possible
dnl
AC_ARG_WITH(out-validator,,
         AC_MSG_ERROR([ Invalid option. Use --with-validator/--without-validator instead ]) )
AC_ARG_ENABLE(validator,,
         AC_MSG_ERROR([ Invalid option. Use --with-validator/--without-validator instead ]) )

dnl ----------------------------------------------------------------------
dnl check for programs
dnl
AC_PATH_PROG([PERLPROG],perl)
AC_PATH_PROG(AR, ar)
AC_PATH_PROG(RM, rm)

# libtool info
AC_PROG_LIBTOOL

# useful stuff for installation
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl ----------------------------------------------------------------------
dnl perl specific arguments
dnl
AC_ARG_WITH(perl-build-args,
[  --with-perl-perl-args=ARGS Add ARGS to building perl Makefiles.],
	PERLARGS="$withval"
)
AC_SUBST(PERLARGS)

dnl ----------------------------------------------------------------------
AC_ARG_WITH(validator,
[  --with-validator       Build libsres, libval and apps.])

if test "x$with_validator" != "xno"; then
  AC_CONFIG_SUBDIRS(validator)
  DNSSEC_SUBDIRS="validator"
fi
AC_SUBST(DNSSEC_SUBDIRS)

dnl ----------------------------------------------------------------------

AC_CONFIG_FILES([
 Makefile:Makefile.in
])
AC_CONFIG_COMMANDS([default], echo timestamp > stamp-h)
AC_OUTPUT
