dnl Process this file with autoconf to produce a configure script.
dnl

dnl provide it a file to simply check for its existence.
AC_INIT([dnssec-tools], [1.4.rc1], [dnssec-tools-users@lists.sourceforge.net])
AC_PREREQ([2.59])

dnl ----------------------------------------------------------------------
dnl catch mis-typed options as early as possible
dnl
AC_ARG_WITH(out-validator,,
         AC_MSG_ERROR([ Invalid option. Use --with-validator/--without-validator instead ]) )
AC_ARG_ENABLE(validator,,
         AC_MSG_ERROR([ Invalid option. Use --with-validator/--without-validator instead ]) )

dnl ----------------------------------------------------------------------
dnl check for programs
dnl
AC_PATH_PROG([PERLPROG],perl)
AC_PATH_PROG(AR, ar)
AC_PATH_PROG(RM, rm)

# libtool info
AC_PROG_LIBTOOL

# useful stuff for installation
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl ----------------------------------------------------------------------
AC_ARG_WITH(validator,
[  --without-validator     Build without libsres, libval and binary apps
                          (Disable if they fail to build on your platform).

   Validator specific options:]
)

if test "x$with_validator" != "xno"; then
  AC_CONFIG_SUBDIRS(validator)
  DNSSEC_SUBDIRS="validator"
  PERLARGS=""
else
  DNSSEC_SUBDIRS="none"
  PERLARGS="NOVALIDATOR"
fi
AC_SUBST(DNSSEC_SUBDIRS)

#
# these are bogus flags for this script but get passed down to validator/config*
#
AC_ARG_WITH(openssl,
[      --with-openssl=PATH     Look for openssl in PATH/{lib,include}.])
AC_ARG_WITH(ipv6,
[      --with-ipv6             Enable IPv6 support.])
AC_ARG_WITH(nsec3,
[      --with-nsec3            Enable nsec3 support.])
AC_ARG_WITH(dlv,
[      --with-dlv              Enable DLV support.])
AC_ARG_WITH(threads,
[      --without-threads       Don't use threads.
])


dnl ----------------------------------------------------------------------
dnl perl specific arguments
dnl
AC_ARG_WITH(perl-build-args,
[  --with-perl-build-args=ARGS Add ARGS to building perl Makefiles.],
	PERLARGS="$PERLARGS $withval"
)
AC_SUBST(PERLARGS)

dnl ----------------------------------------------------------------------
if test "x$prefix" = "xNONE" ; then
   prefix=$ac_default_prefix
fi
expanded_sysconfdir=`eval echo $sysconfdir`
AC_SUBST(expanded_sysconfdir)

expanded_localstatedir=`eval echo $localstatedir`
AC_SUBST(expanded_localstatedir)

AC_CONFIG_FILES([
 Makefile:Makefile.in
 tools/modules/conf.pm:tools/modules/conf.pm.in
 testing/Makefile:testing/Makefile.in
])
AC_CONFIG_COMMANDS([default], echo timestamp > stamp-h)
AC_OUTPUT
